# discord-chatbot

./: .envrc.example  .gitignore  Cargo.toml  Makefile  template.yaml
src/: constants.rs  endpoint.rs  env.rs  environment.rs  error.rs  lib.rs  main.rs  service.rs
src/models/: application_command.rs  channel.rs  chat_completion.rs  message.rs  mod.rs  request.rs  response.rs  user.rs  webhook_request.rs
src/models/chatgpt/: chat_completion.rs
src/models/discord/: message.rs  mod.rs  response.rs  webhook_request.rs
src/models/dynamo/: discord_command.rs
src/services/: chatgpt_service.rs  discord_service.rs  mod.rs
