[package]
name = "discord_chatbot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "cli"
test = false
bench = false

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.1.8", features = ["derive"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
serde = "1.0.154"
serde_json = "1.0.94"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "json"] }
